--- a/contacto.html
+++ b/contacto.html
@@ -150,7 +150,7 @@
         </div>
       </div>
       
-            <button type="submit" class="btn btn-primary " onclick="validar()">Enviar</button>
+            <button type="submit" class="btn btn-primary " onclick="limpiarResultado()">Enviar</button>
     </div>
    
  
